Unable to resolve issue by adding code to survey.html

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -18,7 +18,7 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Compiled and minified JavaScript -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
@@ -186,7 +186,68 @@
         </div>
     </div>
 
-    <script src='../public/surveyForm.js'></script>
+    <script>
+        $('#submitBtn').on('click', function () {
+            function validateForm() {
+                let isValid = true;
+                $('.validate').each(function () {
+                    if ($(this).val() === '') {
+                        isValid = false;
+                    }
+                });
+                $('.browser-default').each(function () {
+                    if ($(this).val() === '') {
+                        isValid = false;
+                    }
+                });
+                return isValid;
+            }
+            if (validateForm() == true) {
+                const geekFriend = {
+                    name: $('#name')
+                        .val()
+                        .trim(),
+                    profilePic: $('#photo')
+                        .val()
+                        .trim(),
+                    scores: [
+                        $('#q1').val(),
+                        $('#q2').val(),
+                        $('#q3').val(),
+                        $('#q4').val(),
+                        $('#q5').val(),
+                        $('#q6').val(),
+                        $('#q7').val(),
+                        $('#q8').val(),
+                        $('#q9').val(),
+                        $('#q10').val()
+                    ]
+                };
+                const currentURL = window.location.origin;
+                $.post(currentURL + '/api/geeks', geekFriend, function (data) {
+                    $('#matchName').text(data.name);
+                    $('#matchPic').attr('src', data.profilePic);
+                });
+
+                $('.modal').modal();
+                $('#name').val('');
+                $('#photo').val('');
+                $('#q1').val('');
+                $('#q2').val('');
+                $('#q3').val('');
+                $('#q4').val('');
+                $('#q5').val('');
+                $('#q6').val('');
+                $('#q7').val('');
+                $('#q8').val('');
+                $('#q9').val('');
+                $('#q10').val('');
+            } else {
+                alert('Please fill out ALL fields before submitting survey!');
+            }
+        });
+
+    </script>
 
 </body>
 
